# aeio

./: .gitignore  CMakeLists.txt  README.md  example1.c  example2.c
include/: aeio.h  forward.h  logdef.h  tlog.h
lfds/: CMakeLists.txt  lfds_porting_abstraction_layer_compiler.h  lfds_porting_abstraction_layer_operating_system.h  lfds_porting_abstraction_layer_processor.h  liblfds.h  liblfds_internal.h
lfds/misc/: lfds_misc.h  lfds_misc_globals.c
src/: CMakeLists.txt  common.c  common.h  forward.c  main.c  tlog.c
